Fix IntelliJ inspection warnings